fix(offcanvas):overflow
add offcanvas with js (bootstrap) to avoid overflow on hamburger click or hide

--- a/style.css
+++ b/style.css
@@ -238,6 +238,10 @@ body {
         text-align: center;
     }
 
+    .sticky-top {
+        overflow: hidden;
+    }
+
 }
 
 /* mobile */
